tests/baselines/reference/classExpressionTest1.errors.txt
classExpressionTest1.ts(6,22): error TS2454: Variable 't' is used before being assigned.
classExpressionTest1.ts(6,25): error TS2454: Variable 'x' is used before being assigned.


==== classExpressionTest1.ts (2 errors) ====
    function M() {
        class C<X> {
            f<T>() {
                var t: T;
                var x: X;
                return { t, x };
                         ~
!!! error TS2454: Variable 't' is used before being assigned.
                            ~
!!! error TS2454: Variable 'x' is used before being assigned.
            }
        }
    
        var v = new C<number>();
        return v.f<string>();
    }